feat: added Role struct in model, implmented get and post for Role, updated api ymal for Role, added migration to change Role table in db
